--- a/styles/component/_index.scss
+++ b/styles/component/_index.scss
@@ -1,1 +1,7 @@
 @forward "time-display";
+@forward "./typography/title-1";
+@forward "./typography/title-2";
+@forward "./typography/title-3";
+@forward "./typography/title-4";
+@forward "./typography/body-1";
+@forward "./typography/body-2";
