sass variables are added correctly to custom properties decloration

--- a/styles/abstract/_colors.scss
+++ b/styles/abstract/_colors.scss
@@ -1,11 +1,11 @@
-$red-500: rgb(248, 112, 112);
+$red-500: #f87070;
 
-$blue-300: rgb(112, 243, 248);
-$blue-600: rgb(30, 33, 63);
-$blue-700: rgb(22, 25, 50);
+$blue-300: #70f3f8;
+$blue-600: #1e213f;
+$blue-700: #161932;
 
-$purple-200: rgb(216, 129, 248);
+$purple-200: #d881f8;
 
-$white-100: rgb(255, 255, 255);
-$gray-200: rgb(215, 224, 255);
-$gray-300: rgb(239, 241, 250);
+$white-100: #ffffff;
+$gray-200: #d7e0ff;
+$gray-300: #eff1fa;
